syntax = "proto3";

option csharp_namespace = "netdd_grpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ServerStream (HelloRequest) returns (stream HelloReply);
  rpc ClientStream (stream HelloRequest) returns (HelloReply);
  rpc BiDirectional (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
